--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-:root { --cor-de-fundo: #EBECEE;}
+:root { --cor-de-fundo: #ce25c0;}
 
 body { background-color: var(--cor-de-fundo);}
 
 
-h1 {background-color: white;}
+h1 {background-color: rgb(178, 41, 190);}
+
+
