--- a/style.css
+++ b/style.css
@@ -7,3 +7,7 @@
 h1 {background-color: rgb(178, 41, 190);}
 
 body {background-color: #FFFFFF;}
+
+body {background-color: #ce25c0;}
+
+h1{background-color: #FFFFFF;}
