--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
 :root { background-color: var(--cor-de-fundo);}
 
 
-h1 {background-color: rgb(178, 41, 190);}
+h1 {background-color: #ce25c0;}
 
 body {background-color: #FFFFFF;}
-
-body {background-color: #ce25c0;}
-
-h1{background-color: #FFFFFF;}
+header{background-color: #ce25c0;}
+.cabeçalho{
+   
+    background-color: #FFFFFF;
+    display: inline;
+}
